syncdoc-core/tests/snapshots/doc_injector_tests__basic_doc_injection.snap
---
source: syncdoc-core/tests/doc_injector_tests.rs
expression: "test_with_code(\"test_basic_doc_injection\", code)"
---
#![doc = include_str!("../docs/lib.md")]

use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

fn test_function(x: u32) -> u32 {
    x + 1
}
