syncdoc-core/tests/snapshots/doc_injector_tests__const_function.snap
---
source: syncdoc-core/tests/doc_injector_tests.rs
expression: "test_with_code(\"test_const_function\", code)"
---
#![doc = include_str!("../docs/lib.md")]



use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

const fn test_const() -> i32 {
    42
}
