syncdoc-core/tests/snapshots/doc_injector_tests__function_with_generics.snap
---
source: syncdoc-core/tests/doc_injector_tests.rs
expression: "test_with_code(\"test_function_with_generics\", code)"
---
#![doc = include_str!("../docs/lib.md")]

    

    use syncdoc::omnidoc;

    #[omnidoc(path = "docs")]
    
fn generic_function<T: Clone>(value: T) -> T {
    value.clone()
}
