syncdoc-core/tests/snapshots/doc_injector_tests__function_with_where_clause.snap
---
source: syncdoc-core/tests/doc_injector_tests.rs
expression: "test_with_code(\"test_function_with_where_clause\", code)"
---
#![doc = include_str!("../docs/lib.md")]

    

    use syncdoc::omnidoc;

    #[omnidoc(path = "docs")]
    
fn with_where<T>(value: T) -> T
where
    T: Clone + std::fmt::Debug,
{
    value.clone()
}
