syncdoc-core/tests/snapshots/doc_injector_tests__unsafe_function_doc.snap
---
source: syncdoc-core/tests/doc_injector_tests.rs
expression: "test_with_code(\"test_unsafe_function_doc\", code)"
---
#![doc = include_str!("../docs/lib.md")]

use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

unsafe fn test_unsafe() {
    println!("unsafe test");
}
